Adding Subtask CRUD Functionality

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
-1. SubTask Crud
+1. SubTask Crud (Done)
 2. Positioning Algo
 3. Edges Create and delete Form (only if required)
 4. Date to be updated when changed status
